--- a/index.html
+++ b/index.html
@@ -1,13 +1,171 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Title</title>
-</head>
-<body>
-    <!-- Your visible content goes here -->
-    <h1>Hello, World!</h1>
-    <p>This is a simple paragraph in the body of the webpage.</p>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Landed by HTML5 UP
+	html5up.net | @ajlkn
+-->
+<html>
+	<head>
+		<title>Wallball</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload landing">
+		<div id="page-wrapper">
+
+			<!-- Header -->
+				<header id="header">
+					<h2 id="logo" style="margin-left: 10px;"><a href="index.html">Wallball</a></h2>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<!--<a href="#">Layouts</a>
+								<ul>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>-->
+							<li><a href="about.html">About</a></li>
+							<li><a href="download.html" class="button primary">Download</a></li>
+						</ul>
+					</nav>
+				</header>
+
+			<!-- Banner -->
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h1>Wallball</h1>
+							<h3>Version 1.0-Alpha</h3>
+							<a href="download.html" class="button primary">Download</a>
+						</header>
+						<!--<span class="image"><img src="images/pic01.jpg" alt="" /></span>-->
+					</div>
+					<a href="#one" class="goto-next scrolly">Next</a>
+				</section>
+				
+			<!-- One -->
+				<section id="one" class="spotlight style1 top">
+					<span class="image fit main"><img src="" alt="" /></span>
+					<div class="content">
+						<div class="container">
+							<div class="row">
+								<div class="col-4 col-16-medium">
+									<header>
+										<h2>Pioneering ESports</h2>
+									</header>
+								</div>
+								<div class="col-8 col-16-medium">
+									<p>Wallball is a fast-paced game where players throw a ball at a wall, 
+										and attempt to score by making opponents miss a catch, or catching the ball mid-air. 
+										This game is a famous version of Wallball which incorporates crucial aspects of the game
+										to provide the best entertainment possible.</p>
+							</div>
+						</div>
+					</div>
+					<a href="#two" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Two -->
+				<!--<section id="two" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Free For All</h2>
+						</header>
+						<p>Wallball is completely free to play. There are no in-app purchases, and absolutely no ads.
+							We want to keep this game as free as possible, so anyone can enjoy it. 
+						</p>
+					</div>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</section>-->
+
+			<!-- Three -->
+				<section id="three" class="spotlight style3 left">
+					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Realistic AI</h2>
+						</header>
+						<p>Our NPCs have been carefully coded to imitate humans playing this game.
+							Their actions are based on the actions of real players, and are designed to have 
+							variety while still perserving playability. 
+						</p>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+
+			<!-- Four -->
+				<section id="four" class="wrapper style1 special fade-up">
+					<div class="container">
+						<header class="major">
+							<h2>Compiled for three major Operating Systems</h2>
+						</header>
+						<div class="box alt">
+							<div class="row gtr-uniform">
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon brands alt major fa-windows"></span>
+									<h3>Windows</h3>
+									<!--<p>Windows 10/11 64-Bit</p>-->
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon brands alt major fa-apple"></span>
+									<h3>Mac</h3>
+									<p></p>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon brands alt major fa-linux"></span>
+									<h3>Linux</h3>
+									<p></p>
+								</section>
+							</div>
+						</div>
+						<footer class="major">
+							<ul class="actions special">
+								<li><a href="download.html" class="button primary">Download</a></li>
+							</ul>
+						</footer>
+					</div>
+				</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<!--<ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>-->
+					<ul class="copyright">
+						<li>&copy; Wallball. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
